--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.MyManager"
         tools:targetApi="31">
         <activity
+            android:name=".loginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OnboardActivity02"
+            android:exported="false" />
+        <activity
             android:name=".OnboardActivity01"
             android:exported="false" />
         <activity
