--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,16 @@
         android:theme="@style/Theme.MyManager"
         tools:targetApi="31">
         <activity
+            android:name=".HomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
             android:name=".OnboardActivity03"
             android:exported="false" />
         <activity
-            android:name=".loginActivity"
+            android:name=".LoginActivity0"
             android:exported="false" />
         <activity
             android:name=".OnboardActivity02"
